--- a/LogITBackend/package.json
+++ b/LogITBackend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "morgan": "^1.10.1",
+    "qrcode": "^1.5.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
